--- a/.github/workflows/github-activity.yml
+++ b/.github/workflows/github-activity.yml
@@ -1,16 +1,21 @@
-name: GitHub - Activity - Readme
+name: Update README
 
 on:
   schedule:
-    - cron: "0 21 * * *"
+    # Runs every first and 12 hrs.
+    - cron: '0 */12 * * *'
   workflow_dispatch:
 
 jobs:
-  build:
+  activity:
+    name: Update README with recent activity
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: DenverCoderOne/github-activity-readme@commit-username-and-email
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Add activity to readme
+        uses: Readme-Workflows/recent-activity@v2.4.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
