--- a/.github/workflows/github-activity.yml
+++ b/.github/workflows/github-activity.yml
@@ -1,21 +1,16 @@
-name: Update README
+name: GitHub - Activity - Readme
 
 on:
   schedule:
-    # Runs every first and 12 hrs.
-    - cron: '0 */12 * * *'
+    - cron: "0 21 * * *"
   workflow_dispatch:
 
 jobs:
-  activity:
-    name: Update README with recent activity
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      - name: Add activity to readme
-        uses: Readme-Workflows/recent-activity@v2.4.1
+      - uses: actions/checkout@v2
+      - uses: DenverCoderOne/github-activity-readme@commit-username-and-email
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
