--- a/.github/workflows/github-activity.yml
+++ b/.github/workflows/github-activity.yml
@@ -2,15 +2,19 @@ name: GitHub - Activity - Readme
 
 on:
   schedule:
-    - cron: "0 21 * * *"
+    - cron: '*/30 * * * *'
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Update this repo's README with recent activity
 
     steps:
       - uses: actions/checkout@v2
-      - uses: DenverCoderOne/github-activity-readme@commit-username-and-email
+      - uses: jamesgeorge007/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          COMMIT_MSG: 'Updated activity'
+          MAX_LINES: 5
