--- a/.github/workflows/github-activity.yml
+++ b/.github/workflows/github-activity.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: DanDHenshaw/github-activity-readme@commit-username-and-email
+      - uses: DanDHenshaw/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
