--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -8,7 +8,7 @@ settings:
     text: "Last Updated: {DATE} (GMT)"
 messages:
   comments: "💬 Commented on {ID} in {REPO}"
-  push: "⬆️ Pushed {AMOUNT} commit(s) to {REPO}"
+  push: "⬆️ Pushed {AMOUNT} commit(s) {ID} to {REPO}"
   issue_opened: "❗️ Opened issue {ID} in {REPO}"
   issue_closed: "✔️ Closed issue {ID} in {REPO}"
   pr_opened: "💪 Opened PR {ID} in {REPO}"
